Refactoring and markdown edit.